- fully working arm32 and arm64 (float, can cross compile principia softwarica)
- bootstrappable (can compile itself)

* 0.1 (Q4 2025) (???, acid)

** toolchain
- import orginal acid debugger from 9-cc (derived from plan9)
  and support for arm64, riscv, and mips in libmach (imported
  respectively from 9front, inferno-os, and 9-cc).

** test infra

** dev infra

** build infra

** internals

* Beta (Q3 2025) (arm64 7a/7c/7l v0, riscv ia/ic/il v0, arm64 linux/macos build, arm32 linux run v0, mk/rc, utilities v0, typesetting v0)

** toolchain
- adapt to goken 7a/7c/7l 
  (working hello_linux_arm64.exe and helloc.exe on my thelio astra)
- adapt to goken ia/ic/il (but not tested, hard to test)
- adapt 5a/5c/5l to generate valid arm32 Linux binaries (EABI)
  (working hello_linux_arm.exe, helloc.exe, and helloprintf.exe also
   on my thelio astra)
- import original 5a/5c/5l from 9cc/plan9 as 5a_/5c_/5l_ and
  extend also to ELF EABI and working hello_linux_arm_.exe

** build
- add mk and rc source code from principia softwarica so self-contained repo with
  build-mk.sh to "bootstrap" mk/rc
- fix mk/rc for unix (RCMAIN, MKSHELL, import PATH, etc.)
  adapting improvements from kencc and plan9port
- add also ed source code from principia softwarica so no need external 'ed' and
  build-mk.sh now build mk, rc, and 'ed'
- adapt to build on arm64 linux and arm64 macos

** internals
- reorg code with all Go related stuff under GO/ (GOSRC/, GOMISC/, GOTEST/)
- started reorg code with machine/, lib_strings, to match principia-softwarica
- added lib9/math/ subdir and move files there.

** libs
- added libregexp (needed by mk/rc) and libstring (needed by du and rc) from
  principia softwarica or plan9port

** utilities
- add source code of many utilities (cat, cp, grep, ed, diff, etc.) from
  principia softwarica so easier to build and test for principia readers
- add source code of typesetting tools (troff, eqn, tbl, etc.) from