@@ -14,9 +14,9 @@ $LIB:	$OFILES
 
 # to generate also y.tab.h with the token definitions
 YFLAGS=-d
-y.tab.h y.tab.c:	$YFILES
+y.tab.h y.tab.c: $YFILES
 	$YACC $YFLAGS $prereq
-lex.yy.c:	$LFILES
+lex.yy.c: $LFILES
 	$LEX $LFLAGS $prereq
 
 # as opposed to mksyslib, we do not install the lib under ROOT/<arch>/lib
@@ -34,4 +34,5 @@ installall:V:
 clean:V:
 	rm -f *.[$OS] y.tab.? y.output y.error $CLEANFILES *.$O $OFILES $LIBNAME
 nuke:V:
-	rm -f *.[$OS] y.tab.? y.output y.error $CLEANFILES *.$O $OFILES $LIB
+        mk clean
+        rm -f $LIB 
