@@ -130,11 +130,11 @@ HFILES= $TOP/include/u.h $TOP/include/libc.h
 
 <$TOP/mkfiles/mksyslib
 
+ROOTDIR=`{cd $TOP/ROOT; pwd}
+
 #bugfix: do not use $preqeq below because then HFILES are also passed
 goos.$O: goos.c
-	$CC $CFLAGS $CFLAGS_EXTRA '-DGOOS='"$GOOS" '-DGOARCH='"$GOARCH" '-DGOROOT='"$ROOT" '-DGOVERSION='"goken" goos.c
-
-ROOTDIR=`{cd $TOP/ROOT; pwd}
+	$CC $CFLAGS $CFLAGS_EXTRA '-DGOOS='"$GOOS" '-DGOARCH='"$GOARCH" '-DGOROOT='"$ROOTDIR" '-DGOVERSION='"goken" goos.c
 
 get9root.$O: get9root.c
 	$CC $CFLAGS $CFLAGS_EXTRA '-DGOROOT='"$ROOTDIR" get9root.c
